[tool.poetry]
name = "statute-trees"
version = "0.0.20"
description = "Law mostly consists of tree-like nodes. This package supports a common tree format for Philippine Codifications, Statutes, and Documents, using a uniform node structure (i.e., leaves of a tree) identified by a given material path."
authors = ["Marcelino G. Veloso III <mars@veloso.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"            # must be fixed because of citation-utils
citation-utils = "^0.0.17"   # has loguru
statute-patterns = "^0.0.25"
email-validator = "^1.3.0"
markdown = "^3.4.1"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
rich = "^12.6"
pytest = "^7.2"
pytest-datadir = "^1.4.1"
pytest-cov = "^2.12.1"
pre-commit = "^2.21"
types-Markdown = "^3.4.0"
types-PyYAML = "^6.0.7"
types-python-slugify = "^5.0.4"
types-python-dateutil = "^2.8.19.2"


[tool.pytest]
minversion = "7.2"
addopts = "-ra -q --cov=tests/"
testpaths = ["tests"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
include_trailing_comma = 'True'

[tool.black]
line-length = 79
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''


[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
