[tool.poetry]
name = "statute-trees"
version = "0.1.3"
description = "Tree-based Philippine Codifications, Statutes, and Documents, using a uniform node structure (i.e., leaves of a tree) identified by a given material path."
authors = ["Marcelino G. Veloso III <mars@veloso.one>"]
readme = "README.md"
license = "MIT"
homepage = "https://lawsql.com"
repository = "https://github.com/justmars/statute-trees"
documentation = "https://github.com/justmars/statute-trees"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Legal Industry",
  "Framework :: Pydantic",
  "Framework :: Pytest",
]

[tool.poetry.dependencies]
python = "^3.11"
citation-utils = "^0.2.7"
statute-patterns = "^0.2.2"

[tool.poetry.group.dev.dependencies]
rich = "^13.3"
pytest = "^7.2"
pytest-datadir = "^1.4.1"
pytest-cov = "^2.12.1"
pre-commit = "^2.21"
types-Markdown = "^3.4.0"
types-PyYAML = "^6.0.7"
types-python-slugify = "^5.0.4"
types-python-dateutil = "^2.8.19.2"
mkdocs = "^1.4.2"
mkdocstrings = { extras = ["python"], version = "^0.20.0" }
mkdocs-material = "^9.1.0"
ipython = "^8.11.0"

[tool.pytest.ini_options]
minversion = "7.2"
filterwarnings = ['ignore::DeprecationWarning']
addopts = "-ra -q --doctest-modules --cov=citation_utils tests/"
testpaths = ["tests"]

[tool.ruff]
ignore = ["F401"]
fixable = ["F", "E", "W", "I001"]
select = ["F", "E", "W", "I001"]

[tool.black]
line-length = 79
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''


[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
